# dirmaker

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
dirmaker/: __init__.py  dirmaker.py
dirmaker/example/: config.yml  data.yml  template.html
dirmaker/example/static/: main.js  style.css
